# ai-stt

./: .dockerignore  .env.example  .gitignore  .release-please-manifest.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: release.yml
ai_service/: CHANGELOG.md  __main__.py  app.py  callback.py  config.py  db.py  errors.py  formats.py  metrics.py  s3io.py  summarize.py  transcribe.py  worker.py
deploy/helm/ai-service/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/ai-service/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  (+3 more)
docker/: ai-service.Dockerfile  entrypoint.sh  whisper-api.Dockerfile
docs/: metrics.md
docs/superpowers/plans/: 2026-07-06-ai-stt-bpm-integration.md  2026-07-11-transcription-perf-test.md  2026-07-13-remote-wer-test.md
docs/superpowers/specs/: 2026-07-05-ai-stt-pipeline-design.md  2026-07-06-ai-stt-bpm-integration-design.md  2026-07-11-transcription-perf-test-design.md  2026-07-13-remote-wer-test-design.md
tests/: conftest.py  test_integration.py  wavgen.py  wer.py
tests/ai_service/: test_app.py  test_callback.py  test_config.py  test_db.py  test_formats.py  test_metrics.py  test_s3io.py  test_summarize.py  test_transcribe.py  test_worker.py
tests/fixtures/wer/: README.md  wer_test.txt
tests/whisper_api/: test_app.py  test_config.py  test_engine.py  test_perf.py  test_wer.py
tools/loadtest/: README.md  bpm_mock.py  replay_workload.py
whisper_api/: CHANGELOG.md  __main__.py  app.py  config.py  engine.py
