[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stt"
version = "0.3.2"
description = "BPM-driven speech-to-text: ai-service + whisper-api"
requires-python = ">=3.11"

[project.optional-dependencies]
service = ["fastapi>=0.111", "uvicorn>=0.30", "boto3>=1.34", "httpx>=0.27"]
api = ["fastapi>=0.111", "uvicorn>=0.30", "python-multipart>=0.0.9", "faster-whisper>=1.0"]
dev = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "boto3>=1.34",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pytest>=8",
    "moto[s3]>=5",
    "respx>=0.21",
    "jiwer>=3",
]

[tool.setuptools]
packages = ["ai_service", "whisper_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: needs model download / real transcription"]
